# CBI-policy-checker

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: main.py
app/api/v1/: routes.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/models/: __init__.py  entities.py
app/prompts/: compliance_check.md  query.md
app/repositories/: documents.py
app/schemas/: common.py  compliance.py  document.py  index.py  query.py
app/services/: pipeline.py
app/services/compliance/: openai_responder.py
app/services/embeddings/: openai_embedder.py
app/services/normalization/: arabic.py
app/services/ocr/: engines.py  pipeline.py
app/services/preprocessing/: image.py
app/services/retrieval/: chunking.py  faiss_store.py
docs/: architecture.md  ocr-notes.md
examples/: generate_scanned_samples.py
examples/policies/: policy_aml_2.txt  policy_branch_ops_5.txt  policy_kyc_1.txt  policy_records_4.txt  policy_sanctions_3.txt
examples/questions/: questions_ar.txt
examples/scenarios/: scenarios_ar.txt
tests/integration/: test_api.py
tests/unit/: test_chunking.py  test_faiss_mapping.py  test_normalization.py  test_ocr_utils.py  test_openai_services_mocked.py
